--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@iconify/react": "^4.1.0",
     "@mui/lab": "^5.0.0-alpha.103",
     "@mui/material": "^5.11.10",
+    "@reduxjs/toolkit": "^2.1.0",
     "apexcharts": "^3.37.0",
     "axios": "^1.5.0",
     "change-case": "^4.1.2",
@@ -58,6 +59,7 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.43.1",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "simplebar-react": "^3.2.1",
