--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "axios": "^1.5.0",
     "change-case": "^4.1.2",
     "date-fns": "^2.29.3",
+    "formik": "^2.4.5",
     "history": "^5.3.0",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
@@ -63,7 +64,8 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "simplebar-react": "^3.2.1",
-    "web-vitals": "^3.1.1"
+    "web-vitals": "^3.1.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.21.0",
