--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "apexcharts": "^3.37.0",
     "axios": "^1.5.0",
     "change-case": "^4.1.2",
+    "crypto-js": "^4.2.0",
     "date-fns": "^2.29.3",
     "formik": "^2.4.5",
     "history": "^5.3.0",
