--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "change-case": "^4.1.2",
     "crypto-js": "^4.2.0",
     "date-fns": "^2.29.3",
+    "dayjs": "^1.11.12",
     "formik": "^2.4.5",
     "history": "^5.3.0",
     "jwt-decode": "^3.1.2",
